--- a/Abstract_LinkedList.csproj
+++ b/Abstract_LinkedList.csproj
@@ -43,10 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LinkedList.cs" />
+    <Compile Include="LinkedListed.cs" />
     <Compile Include="NODE.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queued.cs" />
     <Compile Include="Stacked.cs" />
   </ItemGroup>
   <ItemGroup>
